following example in https://github.com/okkez/coveralls-lcov

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,5 @@ script:
 after_success:
   - cd -
   - cd Line/CMakeFiles/Line.dir
+  - lcov --compat-libtool --directory . --capture --output-file coverage.info
   - coveralls-lcov coverage.info
