--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: cpp
 
+sudo: required
+
 install:
+  - sudo apt-get install -y lcov
   - gem install coveralls-lcov
 
 addons:
@@ -16,7 +19,12 @@ compiler:
 before_install:
   - pip install --user cpp-coveralls
 
+before_script:
+ - ./autogen.sh
+ - ./configure --enable-coverage
+
 script:
+  - make check
   - mkdir build
   - cd build
   - cmake ..
